# pyfibot

./: .ackrc  .flake8  .gitignore  .gitmodules  .landscape.yaml  .mergify.yml  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  LICENSE  Makefile  Pipfile  README  README.md  TODO  Taskfile.yml  _config.yml  app.py  bootstrap.py  botcore.py  example.yml  example_full.yml  ez_setup.py  features.html  imgur_auth.py  index.html  ircprotocol.py  params.json  pavement.py  pyfibot.py  pyfibot.shelve  pyfibot.shelve.db  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  run.sh  setup.cfg  (+4 more)
.circleci/: config.yml
.github/: dependabot.yml  mergify.yml
.github/workflows/: python-app.yml  stale.yml
docs/: Makefile  conf.py  index.rst  make.bat
faq/ioh9s1/: pineapple_of_the_borg
faq/norsu/: forum  galleria  wiki
faq/wow/: best  grinding  meta  old_patch  omg_paid_trial  patch  private_servers  ptr  ui_sites
faq/wow.crew/: latest_realm  next_patch  omg_paid_trial  patch_error  realm_specific_question  rules  server_down  sites
lib/: compass_points.py
modules/: __init__.py  module_ask.conf  module_ask.py  module_autoop.py  module_autorejoin.py  module_bmi.py  module_bmj.py  module_calc.py  module_expl.py  module_faq.py  module_food.py  module_forecast.py  module_imdb.py  module_imgur.py  module_kv.py  module_metacritic.py  module_nugget.py  module_oraakkeli.py  module_pgsqlseries.py  module_pgsqlwanha.py  module_posti.py  module_rss.conf  module_rss.py  module_series.py  module_serverstatus.py  module_sga.py  module_spotify.py  module_sqliteseries.py  module_sqlitewanha.py  module_urlsize.py  module_urltitle.py  module_wanha.py  module_weather.py  module_webchat.py
modules/_notdone/: imdb.py  module_calc.py  module_date.py  module_dict.py  module_fun.py  module_google.py  module_googlefight.py  module_hash.py  module_imdb.py  module_ircgallery.py  module_kohan.py  module_remind.py  svnlog.py  weather.py
modules/available/: module_ask.conf  module_ask.py  module_imgur.py  module_nugget.py  module_oraakkeli.py  module_pgsqlseries.py  module_pgsqlwanha.py  module_sqliteseries.py  module_sqlitewanha.py
odb2/: __init__.py  trdict.py
pyfibot/: botcore.py  colorlogger.py  config_schema.json  pyfibot.py
pyfibot/lib/: colorlogger.py  compass_points.py  eplib.py  namedays.py
pyfibot/modules/: __init__.py  module_admin.py  module_autoop.py  module_autorejoin.py  module_bmi.py  module_btc.py  module_calc.py  module_expl.py  module_fmi.py  module_forecast.py  module_geoip.py  module_imdb.py  module_korona.py  module_matkahuolto.py  module_openweather.py  module_oraakkeli.py  module_posti.py  module_rss.conf  module_rss.py  module_rss2.py  module_spotify.py  module_thetvdb.py  module_tvmaze.py  module_tvrage.py  module_update.py  module_urlsize.py  module_urltitle.py  module_usertrack.py  module_weather.py  module_webchat.py  module_wolfram_alpha.py  module_youtube.py
pyfibot/modules/available/: module_ask.py  module_autoop.py  module_autoop_old.py  module_calc.py  module_dhl.py  module_expl.py  module_forecast.py  module_imgur.py  module_nugget.py  (+9 more)
pyfibot/odb2/: filestr.py
pyfibot/static/: config_schema.json
pyfibot/tests/: test_areena.py  test_openweather.py  test_rss.py  test_spotify.py  test_wikipedia.py
pyfibot/util/: BeautifulSoup.py  __init__.py  dictdiffer.py  find_config_opts.py  imgur_auth.py  ptime.py  pyfiurl.py  twitter_application_auth.py
stylesheets/: style.css
tests/: bot_mock.py  conftest.py  test_areena.py  test_bmi_advanced.py  test_botcore.py  test_config.yml  test_config_validation.py  test_dictdiffer.py  test_example.py  test_fmi_validation.py  test_module_helpers.py  test_openweather.py  test_posti.py  test_pyfiurl.py  test_rss.py  test_rss2.py  test_spotify.py  test_string_processing.py  test_urltitle.py  test_urltitle_integration.py  test_urltitle_simple.py  test_urltitle_youtube.py  test_util_functions.py  test_wikipedia.py  test_wolfram_alpha.py  utils.py
tests/cassettes/: test_alko.yaml  test_apina.yaml  test_areena_live.yaml  test_areena_not_available.yaml  test_areena_radio.yaml  test_areena_series.yaml  test_areena_tv.yaml  test_areena_tv_exiting.yaml  test_areena_tv_exiting_in_far_far_future.yaml  test_complex.yaml  test_discogs_release.yaml  test_discogs_user.yaml  test_dx.yaml  test_ebay.yaml  test_ebay_cgi.yaml  test_eight.yaml  test_eleven.yaml  test_five.yaml  test_forecast.yaml  test_four.yaml  test_gfycat_direct_url.yaml  test_gfycat_own_title.yaml  test_gfycat_reddit_title.yaml  test_github.yaml  test_google_play_music.yaml  test_http_album.yaml  test_http_artist.yaml  test_iltalehti.yaml  test_iltasanomat.yaml  test_imdb.yaml  test_liveleak.yaml  test_meta_fragment.yaml  test_nettiauto.yaml  test_nine.yaml  test_one.yaml  test_poliisifi.yaml  test_pythonorg.yaml  test_saaren_taika_url_real.yaml  test_salakuunneltua.yaml  test_seven.yaml  (+17 more)
tests/static/: test_rss_check.xml
util/: BeautifulSoup.py  SOAP.py  google.py  pyfiurl.py  timeoutdict.py
(+1 files in other folders)
