[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfibot"
version = "0.1.0"
description = "A Python IRC bot with modular plugin system"
requires-python = ">=3.8"
dependencies = [
    "twisted>=24.0.0",
    "requests",
    "pyyaml",
    "jsonschema>=1.0.0",
    "beautifulsoup4",
    "pyopenssl",
    "ndg-httpsclient",
    "pyasn1",
    "tvdb-api",
    "repoze.lru",
    "pygeoip",
    "sqlalchemy",
    "dataset",
    "python-instagram",
    "simplejson>=3.0.0",
    "httplib2>=0.8.0",
    "feedparser>=5.1.3",
    "service-identity",
    "python-dateutil>=2.2",
    "pytz",
    "pytvmaze",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pylint",
    "pep8",
    "autopep8",
    "pytest",
    "coverage",
    "vcrpy",
]

[tool.hatch.build.targets.sdist]
include = [
    "/pyfibot",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["pyfibot"]