[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfibot"
version = "0.1.0"
description = "A Python IRC bot with modular plugin system"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Riku 'Shrike' Lindblad", email = "shrike@addiktit.net" },
]
keywords = ["irc", "bot", "twisted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Twisted",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = [
    "twisted>=24.0.0",
    "requests",
    "pyyaml",
    "jsonschema>=1.0.0",
    "beautifulsoup4",
    "pyopenssl",
    "ndg-httpsclient",
    "pyasn1",
    "tvdb-api",
    "repoze.lru",
    "geoip2",
    "sqlalchemy",
    "dataset",
    "python-instagram",
    "simplejson>=3.0.0",
    "httplib2>=0.8.0",
    "feedparser>=5.1.3",
    "service-identity",
    "python-dateutil>=2.2",
    "pytz",
    "pytvmaze",
]

[project.urls]
Homepage = "https://github.com/lepinkainen/pyfibot"
Repository = "https://github.com/lepinkainen/pyfibot"

[project.scripts]
pyfibot = "pyfibot.pyfibot:main"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "pylint",
    "pep8",
    "autopep8",
    "pytest",
    "pytest-cov",
    "coverage",
    "vcrpy",
]

[tool.hatch.build.targets.sdist]
include = [
    "/pyfibot",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["pyfibot"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
ignore_errors = false
strict_optional = false
files = ["pyfibot/botcore.py", "pyfibot/pyfibot.py"]
exclude = ["pyfibot/modules/"]

[[tool.mypy.overrides]]
module = "pyfibot.modules.*"
ignore_errors = true


[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.31.0.6",
]
